[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support_env_sla"
version = "0.1.0"
description = "Customer support SLA simulation environment for OpenEnv"
authors = [{ name = "Amaan" }]
requires-python = ">=3.11"

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "server*"]